2005-04-29  JP Rosevear  <jpr@novell.com>

	* Makefile.am: don't build wizard related code

	* Evolution.idl: remove wizard idl include

	* e-shell.c: remove wizard include

	* Remove wizard related code which is now in a plugin (and is much
	simpler due to eplugin)

2005-04-28  Not Zed  <NotZed@Ximian.com>

	* main.c (main): setup the profiling plugin hook if profiling is
	compiled in.

2005-04-06  Yong Sun <Yong.Sun@Sun.COM>

	* e-shell-importer.c: (get_name_from_component_info):
	Return the localized name of the supported file type.

2005-03-21  JP Rosevear  <jpr@novell.com>

	Fixes #73066
	
	* apps_evolution_shell.schemas.in.in: fix typo

2005-03-21  JP Rosevear  <jpr@novell.com>
	
	* main.c: switch #ifdef DEVELOPMENT to #if DEVELOPMENT so the
	configure.in foo actually controls this

2005-03-17  Not Zed  <NotZed@Ximian.com>

	* es-event.h: fix the qualifier bit assignments for the STATE target.

	* e-shell.c (offline_procedure_finished_cb): fix offline state event.

2005-02-28  JP Rosevear  <jpr@novell.com>

	* e-shell-window-commands.c (command_submit_bug): update authors
	list for about dialog

2005-02-21  JP Rosevear  <jpr@novell.com>
  
  	* es-event.c (es_event_target_new_upgrade): create upgrade target
  
  	* es-event.h: add upgrade target 
  
  	* e-shell.c (e_shell_attempt_upgrade): emit upgrade.done
  
2005-02-23  JP Rosevear  <jpr@novell.com>
 
 	Fixes #33287
 	
 	* e-shell-window.c (e_shell_window_new): set the send/receive
 	sensitivity when we first start up
	
2005-02-23  Hans Petter Jansson  <hpj@novell.com>

	* e-shell-window-commands.c:
	* e-shell.c:
	* main.c: Include <libedataserverui/e-passwords.h>.

2005-02-22  Marco Pesenti Gritti  <marco@gnome.org>

	* shell/e-shell-window-commands.c: (command_quick_reference):
	Use gnome-vfs API to open quick reference in the pdf viewer

2005-02-22  William Jon McCann  <mccann@jhu.edu>

	* e-shell-window.c (setup_offline_toggle): Make offline button scale
	with font size.  Fixes #48868.
